# trvim

./: .gitignore  CMakeLists.txt  CheatSheet.md  Makefile  README.md  UserGuide.md  install.sh  setup.sh
include/: abuf.h  buffer.h  clipboard.h  cmdbar.h  cmdstack.h  editor.h  input.h  keybinds.h  row.h  settings.h  utils.h  view.h  window.h
src/: abuf.c  abuf.h  buffer.c  buffer.h  clipboard.c  cmdbar.c  cmdstack.c  editor.c  editor.h  highlight.c  highlight.h  input.c  input.h  keybinds.h  main.c  row.c  row.h  settings.c  settings.h  stack.c  stack.h  utils.c  utils.h  vector.c  vector.h  view.c  window.c
